# parcelforce-expresslink

./: .gitignore  README.md  pyproject.toml
src/parcelforce_expresslink/: address.py  client.py  combadge.py  config.py  expresslink_client.py  notifications.py  provider2.py  request_response.py  services.py  shared.py  shipment.py  top.py  types.py
src/parcelforce_expresslink/client/: alerts.py  combadge.py  request_response.py  shipment_details.py
src/parcelforce_expresslink/models/: address.py  base.py  config.py  contact.py  delivery_collection.py  documents.py  notifications.py  parcel.py  postoffice.py  services.py  shipment.py
src/parcelforce_expresslink/tests/: conftest.py  test_parcelforce.py  test_readme.py
tests/: conftest.py  test_parcelforce.py  test_pf.py
