[project]
name = "parcelforce-expresslink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
parcelforce-expresslink = "parcelforce_expresslink:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
